Fix z-index order for service descriptions

--- a/theme/css/inmetrics.css
+++ b/theme/css/inmetrics.css
@@ -682,6 +682,9 @@ header .lang a + a {
   right: 0;
 }
 /*===============================*/
+.mfp-wrap {
+  z-index: 9999 !important;
+}
 .service-description {
   border-radius: 15px;
   font-family: 'Droid Sans', Arial, sans-serif;
