--- a/theme/less/tables.less
+++ b/theme/less/tables.less
@@ -154,6 +154,11 @@
 }
 
 /*===============================*/
+
+.mfp-wrap {
+  z-index: 9999 !important;
+}
+
 .service-description {
   border-radius: 15px;
   font-family: 'Droid Sans', Arial, sans-serif;
